Доработка сжатия видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -149,9 +149,6 @@ Global queue position: <b>{0}</b>
 video.editing.step=Editing
 video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
 Result resolution: <b>{1}</b>
-message.video.resolution.warn=\ud83d\udca1<i>You must know that increasing the video resolution doesn't mean improving the quality</i>
-message.video.crf.warn=\ud83d\udca1<i>For compression choose a <b>Compression rate</b>. You should know that decreasing \
-video resolution, without choosing a compression rate, will not compress your video</i>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
@@ -367,3 +364,7 @@ message.use.vedit.for.compression=With /vedit command you can compress your vide
 So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
 message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
+message.resolution.selected=Resolution is selected. Recommended compression rate to keep quality: {0}%. Estimated size after compression: {1}. \
+If you want you can choose another compression rate manually
+message.resolution.cant.be.increased=You can only decrease the video resolution. Your video resolution is {0}, so you need to choose \
+resolution lower than that
