--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -135,9 +135,6 @@ Global navbatdagi joy: <b>{0}</b>
 video.editing.step=tahrirlash
 video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
 Natijada echim: <b>{1}</b>
-message.video.resolution.warn=\ud83d\udca1<i>Video piksellar sonini oshirish sifatni yaxshilash degani emasligini bilishingiz kerak.</i>
-message.video.crf.warn=\ud83d\udca1<i>Videoni siqish uchun <b>Siqilish nisbati</b> ni tanlang. Siz shuni bilishingiz kerakki, \
-video o'lchamlari, siqishni tezligini tanlamasdan, sizning videongizni siqmaydi</i>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
@@ -368,3 +365,8 @@ message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> 
 <b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
 message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
+message.resolution.selected=Video o''lchamlari tanlangan. Sifatni saqlash uchun tavsiya etilgan siqishni nisbati: {0}%. \
+Video siqilganidan keyin taxminiy hajmi: {1}. \
+Agar siz boshqa siqishni nisbatlarini tanlamoqchi bo''lsangiz, buni qo''lda qilishingiz mumkin
+message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
+bundan kamroq rezolyutsiyani tanlashingiz kerak
