Улучшил ответ при выборе качества о рекомендумых настройках

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -364,7 +364,9 @@ message.use.vedit.for.compression=With /vedit command you can compress your vide
 So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
 message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
-message.resolution.selected=Resolution is selected. Recommended compression rate to keep quality: {0}%. Estimated size after compression: {1}. \
-If you want you can choose another compression rate manually
+message.resolution.selected=Recommended settings for good compression: {0}% compression rate and {1} audio bitrate. \
+If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.resolution.cant.be.increased=You can only decrease the video resolution. Your video resolution is {0}, so you need to choose \
 resolution lower than that
+message.compression.rate.selected=Recommended settings for good compression: {0} audio bitrate and {1} resolution. \
+If you want you can choose another settings manually, but in that way i can''t guarantee good result
