--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -365,8 +365,9 @@ message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> 
 <b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
 message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
-message.resolution.selected=Video o''lchamlari tanlangan. Sifatni saqlash uchun tavsiya etilgan siqishni nisbati: {0}%. \
-Video siqilganidan keyin taxminiy hajmi: {1}. \
-Agar siz boshqa siqishni nisbatlarini tanlamoqchi bo''lsangiz, buni qo''lda qilishingiz mumkin
+message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0}% siqish tezligi va {1} audio bit tezligi. \
+Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
 bundan kamroq rezolyutsiyani tanlashingiz kerak
+message.compression.rate.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} audio bit tezligi va {1} piksellar sonidir. \
+Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
