Мелкие исправления по редактированию видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,8 @@ message.vmake.queued=Video will be created from audio and image in <b>{0}</b> fo
 Global queue position: <b>{1}</b>
 message.mute.queued=Audio will be removed from video\n\
 Global queue position: <b>{0}</b>
+message.prepare.video.editing.queued=Preparing video for editing\n\
+Global queue position: <b>{0}</b>
 message.upload.queued=File will be uploaded\n\
 Global queue position: <b>{0}</b>
 message.watermark.queued=Watermark will be added\n\
@@ -132,15 +134,14 @@ message.video.edit.settings=<b>Your file</b>:\n\
 Format: <b>{0}</b>\n\
 Size: <b>{1}</b>\n\
 Resolution: <b>{2}</b>\n\n\
-<b>Video edit settings</b>:\n\
-Compress by: <b>{3}</b>\n\
-Resolution: <b>{4}</b>\n\
-Audio codec: <b>{5}</b>\n\
-Audio bitrate: <b>{6}</b>\n\
-Audio channel layout: <b>{7}</b>\n\n\
 <b>Result</b>:\n\
-Estimated size: <b>{8}</b>
-message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
+Estimated size: <b>{3}</b>\n\
+Compress by: <b>{4}</b>\n\
+Resolution: <b>{5}</b>\n\
+Audio codec: <b>{6}</b>\n\
+Audio bitrate: <b>{7}</b>\n\
+Audio channel layout: <b>{8}</b>
+message.video.edit.choose.settings=You haven't selected any settings. Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=\ud83d\udd25Edit video
 message.choose.video.edit.settings=Choose video edit settings on the keyboard
 message.send.video.to.edit=At first send me a video or direct link to a video to edit
