--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -6,6 +6,8 @@ message.concatenate.files.queued=Fayllar bitta ga birlashtiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
 message.upload.queued=Fayl yuklanadi\n\
 Global navbatdagi joy: <b>{0}</b>
+message.prepare.video.editing.queued=Videoni tahrirlash uchun tayyorlash\n\
+Global navbatdagi joy: <b>{0}</b>
 message.file.format=Format: <b>{0}</b>
 message.file.size=Hajmi: <b>{0}</b>
 message.files.count=Fayllar soni: <b>{0}</b>
@@ -117,16 +119,16 @@ Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. Video haqida ma'lumot \
 olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings=<b>Sizning faylingiz</b>:\n\
 Format: <b>{0}</b>\n\
-Hajmi: <b>{1}</b>\n\n\
-<b>Videoni tahrirlash sozlamalari</b>:\n\
-Video o''lchamlari: <b>{3}</b>\n\
-Qisqartirish: <b>{2}</b>\n\
-Audio codec: <b>{4}</b>\n\
-Audio bitrate: <b>{5}</b>\n\
-Audio channel layout: <b>{6}</b>\n\n\
+Hajmi: <b>{1}</b>\n\
+O''lchamlari: <b>{2}</b>\n\
 <b>Natija</b>:\n\
-Hisoblangan o''lcham: <b>{7}</b>
-message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
+Hisoblangan o''lcham: <b>{3}</b>\n\
+O''lchamlari: <b>{4}</b>\n\
+Qisqartirish: <b>{5}</b>\n\
+Audio codec: <b>{6}</b>\n\
+Audio bitrate: <b>{7}</b>\n\
+Audio channel layout: <b>{8}</b>
+message.video.edit.choose.settings=Siz hech qanday sozlamalarni tanlamadingiz. Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=\ud83d\udd25Videoni tahrirlash
 message.choose.video.edit.settings=Klaviaturada video tahrirlash sozlamalarini tanlang
 message.send.video.to.edit=Avval tahrirlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
