Корректная работа при редактировании видео без звука

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -367,7 +367,12 @@ message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
 message.resolution.selected=Recommended settings for good compression: {0}% compression rate and {1} audio bitrate. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
+message.resolution.selected.no.audio=Recommended settings for good compression: {0}% compression rate. \
+If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.resolution.cant.be.increased=You can only decrease the video resolution. Your video resolution is {0}, so you need to choose \
 resolution lower than that
 message.compression.rate.selected=Recommended settings for good compression: {0} audio bitrate and {1} resolution. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
+message.compression.rate.selected.no.audio=Recommended settings for good compression: {0} resolution. \
+If you want you can choose another settings manually, but in that way i can''t guarantee good result
+message.no.audio.in.video=Your video doesn't contain audio so you can't choose audio settings because it has no sense
