--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -369,7 +369,12 @@ message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumki
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
 message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0}% siqish tezligi va {1} audio bit tezligi. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
+message.resolution.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0}% siqish tezligi. \
+Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
 bundan kamroq rezolyutsiyani tanlashingiz kerak
 message.compression.rate.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} audio bit tezligi va {1} piksellar sonidir. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
+message.compression.rate.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} piksellar sonidir. \
+Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
+message.no.audio.in.video=Videoda audio mavjud emas, shuning uchun siz audio uchun sozlamalarni tanlay olmaysiz, chunki bu mantiqiy emas
