--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -376,3 +376,4 @@ If you want you can choose another settings manually, but in that way i can''t g
 message.compression.rate.selected.no.audio=Recommended settings for good compression: {0} resolution. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.no.audio.in.video=Your video doesn't contain audio so you can't choose audio settings because it has no sense
+message.video.screenshot.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time <b>{1}</b>. Taking screenshot impossible with this options
