--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -377,3 +377,4 @@ message.compression.rate.selected=Рекомендуемые настройки 
 message.compression.rate.selected.no.audio=Рекомендуемые настройки для хорошего сжатия: разрешение {0}. \
 При желании вы можете выбрать другие настройки вручную, но в этом случае я не могу гарантировать хороший результат
 message.no.audio.in.video=Ваше видео не содержит аудио, поэтому вы не можете выбрать найтройки для аудио, так как это не имеет смысла
+message.video.screenshot.out.of.range=\u2757\ufe0fДлина видео <b>{0}</b>, но вы выбрали время <b>{1}</b>. Получение скриншота невозможно
