--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -378,3 +378,4 @@ Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda
 message.compression.rate.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} piksellar sonidir. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.no.audio.in.video=Videoda audio mavjud emas, shuning uchun siz audio uchun sozlamalarni tanlay olmaysiz, chunki bu mantiqiy emas
+message.video.screenshot.out.of.range=\u2757\ufe0fVideo uzunligi <b>{0}</b>, lekin siz <b>{1}</b> vaqtni tanladingiz. Skrinshot olish mumkin emas
