Поправил обрезку видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,6 +16,8 @@ message.probe.queued=Metadata will be get from the file\n\
 Global queue position: <b>{0}</b>
 message.video.cut.queued=Video will be cut\n\
 Global queue position: <b>{0}</b>
+message.audio.cut.queued=Audio will be cut\n\
+Global queue position: <b>{0}</b>
 message.concatenate.files.queued=The files will be merged to one\n\
 Global queue position: <b>{0}</b>
 message.compress.queued=The file will be compressed\n\
