--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -206,6 +206,8 @@ message.probe.queued=Meta-ma''lumot fayldan olinadi\n\
 Global navbatdagi joy: <b>{0}</b>
 message.video.cut.queued=Video qisqartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
+message.audio.cut.queued=Audio qisqartiriladi\n\
+Global navbatdagi joy: <b>{0}</b>
 video.making.step=Video yaratish
 muting.step=Ovoz o'chirilmoqda
 cutting.step=Qirqish
