Отладка и новые фиксы ошибок аудио конвертера

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -113,7 +113,7 @@ message.concatenate.incorrect.file=Send me {0} files
 concatenation.step=Merging
 message.concatenate.min.2.files=You must to send 2 or more files to merge.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
-audio.compression.compress.command.name=Compress
+audio.compression.compress.command.name=\ud83d\udd25Compress
 message.audio.compress.welcome=Send me an audio to compress. Only the last sent file will be compressed
 message.audio.bass.boost.welcome=Send me an audio to bass boost. Only the last sent file will be handled
 message.audio.compress.file.not.found=At first send me an audio to compress
