--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -94,7 +94,7 @@ message.concatenate.canceled=Отменено <b>{0}</b> файлов
 message.concatenate.incorrect.file=Отправьте мне {0} файлы
 message.concatenate.min.2.files=Вам нужно отправить 2 или более файлов для объединения.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
-audio.compression.compress.command.name=Сжать
+audio.compression.compress.command.name=\ud83d\udd25Сжать
 message.audio.compress.welcome=Отправьте мне аудио для сжатия. Только последнее отправленное аудио будет сжато
 message.audio.bass.boost.welcome=Отправьте мне аудио для добавления басов. Только последнее отправленное аудио будет обработано
 message.audio.compress.file.not.found=Сначала отправьте аудио для сжатия
