--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -95,7 +95,7 @@ message.concatenate.canceled=Bekor qilindi <b>{0}</b> fayllar
 message.concatenate.incorrect.file=Menga {0} fayllarini yuboring
 message.concatenate.min.2.files=Birlashtirish uchun 2 yoki undan ortiq fayllarni yuborishingiz kerak.
 message.audio.compression.bitrate=Bit rate: <b>{0}K</b>
-audio.compression.compress.command.name=Kichraytiring
+audio.compression.compress.command.name=\ud83d\udd25Kichraytiring
 message.audio.compress.welcome=Siqish uchun menga audio yuboring. Faqat oxirgi yuborilgan audio siqiladi
 message.audio.bass.boost.welcome=Send me audio for adding bass. Only the last audio sent will be processed
 message.audio.compress.file.not.found=Avval siqishni uchun audio yuboring
