Поправил чтобы все кнопки были при редактировании видео видны Поправил чтобы при сжатии аудио не было информации о сжатии видео

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -310,7 +310,7 @@ vavmerge.start.command.name=Start
 vedit.resolution.command.name=\ud83e\uddbeResolution
 vedit.quality.command.name=\ud83e\udd77Compression rate
 vedit.audio.codec.command.name=Audio codec
-vedit.audio.mono.stereo.command.name=Audio channel layout
+vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
 message.selected=Selected
 message.choose.video.crf=Choose compression rate on the keyboard
