--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -303,7 +303,7 @@ message.only.media.from.link.can.be.uploaded=Вы не отправили пря
 vedit.resolution.command.name=\ud83e\uddbeРазрешение
 vedit.quality.command.name=\ud83e\udd77Степень сжатия
 vedit.audio.codec.command.name=Аудио кодек
-vedit.audio.mono.stereo.command.name=Аудио channel layout
+vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Аудио битрейт
 message.choose.video.crf=Выберите crf на клавиатуре
 message.choose.video.audio.codec=Выберите аудио кодек на клавиатуре
