--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -309,7 +309,7 @@ message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadin
 vedit.resolution.command.name=\ud83e\uddbeO'lchamlari
 vedit.quality.command.name=\ud83e\udd77Siqilish nisbati
 vedit.audio.codec.command.name=Audio codec
-vedit.audio.mono.stereo.command.name=Audio channel layout
+vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
 message.choose.video.crf=Klaviaturadan crf-ni tanlang
 message.choose.video.audio.codec=Klaviaturada audio kodekni tanlang
