Улучшил сообщения о том что сжать не удалось

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -58,8 +58,8 @@ Customer service</a>.
 message.damaged.file=File is <b>damaged</b> or has <b>incorrect format</b> or <b>you have sent incorrect settings(for example bitrate)</b>. \
 It can't be converted. Perhaps the developers will fix a problem and I can send your file later. <b>Please, report the incident to</b> \
 <a href="https://t.me/smart_file_utils_support"> Customer service</a>.
-message.incompressible.video=I can't compress this video
-message.incompressible.audio=I can't compress this audio
+message.incompressible.video=I can't compress this video. Use /vedit command for better compression
+message.incompressible.audio=I can't compress this audio. This audio already good compressed. Use /acompress command with lower bitrate for better compression
 formats.command.description=conversion formats
 waiting.step=Waiting
 watermark.adding.step=Watermark adding
