--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -45,7 +45,7 @@ message.conversion.failed=Что то пошло не так. Запрос не 
 Службу поддержки</a>.
 message.damaged.file=Файл <b>поврежден</b> или <b>имеет неверный формат</b>. Он не может быть сконвертирован. \
 Возможно разработчики скоро исправят проблему и я смогу отправить вам файл позже. <b>Пожалуйста, сообщите об инциденте в</b> <a href="https://t.me/smart_file_utils_support">Службу поддержки</a>.
-message.incompressible.video=Я не могу сжать это видео
+message.incompressible.video=Я не могу сжать это видео. Используйте команду /vedit для более лучшего сжатия
 compressing.step=Сжатие
 concatenation.step=Объединение
 formats.command.description=форматы конвертации
@@ -135,7 +135,7 @@ message.video.will.be.edited=Видео будет изменено\n\
 video.editing.step=Редактирование
 video.editing.resolution.changed=Оригинальное разрешение: <b>{0}</b>\n\
 Результирующее разрешение: <b>{1}</b>
-message.incompressible.audio=Я не могу сжать это аудио
+message.incompressible.audio=Я не могу сжать это аудио. Это аудио уже хорошо сжато. Используйте команду /acompress с более низким битрейтом для лучшего сжатия
 message.compress.audio.output.format=Формат сжатия: <b>{0}</b>
 message.compress.audio.output.frequency=Частота: <b>{0}Hz</b>
 message.compress.audio.format.updated=Формат сжатия обновлен
