Попытка работать с битрейтом оказалась ошибочной. Возвращаем работу с crf

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -137,12 +137,11 @@ Format: <b>{0}</b>\n\
 Size: <b>{1}</b>\n\
 Resolution: <b>{2}</b>\n\n\
 <b>Result</b>:\n\
-Estimated size: <b>{3}</b>\n\
-Compress by: <b>{4}</b>\n\
-Resolution: <b>{5}</b>\n\
-Audio codec: <b>{6}</b>\n\
-Audio bitrate: <b>{7}</b>\n\
-Audio channel layout: <b>{8}</b>
+Crf(Quality): <b>{3}</b>\n\
+Resolution: <b>{4}</b>\n\
+Audio codec: <b>{5}</b>\n\
+Audio bitrate: <b>{6}</b>\n\
+Audio channel layout: <b>{7}</b>
 message.video.edit.choose.settings=You haven't selected any settings. Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=\ud83d\udd25Edit video
 message.choose.video.edit.settings=Choose video edit settings on the keyboard
@@ -308,12 +307,12 @@ message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
 vedit.resolution.command.name=\ud83e\uddbeResolution
-vedit.quality.command.name=\ud83e\udd77Compression rate
+vedit.quality.command.name=\ud83e\udd77Crf(Quality)
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
 message.selected=Selected
-message.choose.video.crf=Choose compression rate on the keyboard
+message.choose.video.crf=Choose crf on the keyboard
 message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
 message.choose.video.audio.mono.stereo=Choose audio channel layout on the keyboard
@@ -367,9 +366,9 @@ message.use.vedit.for.compression=With /vedit command you can compress your vide
 So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
 message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
-message.resolution.selected=Recommended settings for good compression: {0}% compression rate and {1} audio bitrate. \
+message.resolution.selected=Recommended settings for good compression: {0} crf and {1} audio bitrate. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
-message.resolution.selected.no.audio=Recommended settings for good compression: {0}% compression rate. \
+message.resolution.selected.no.audio=Recommended settings for good compression: {0} crf. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.resolution.cant.be.increased=You can only decrease the video resolution. Your video resolution is {0}, so you need to choose \
 resolution lower than that
