--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -122,12 +122,11 @@ Format: <b>{0}</b>\n\
 Hajmi: <b>{1}</b>\n\
 O''lchamlari: <b>{2}</b>\n\
 <b>Natija</b>:\n\
-Hisoblangan o''lcham: <b>{3}</b>\n\
-O''lchamlari: <b>{4}</b>\n\
-Qisqartirish: <b>{5}</b>\n\
-Audio codec: <b>{6}</b>\n\
-Audio bitrate: <b>{7}</b>\n\
-Audio channel layout: <b>{8}</b>
+Crf(Sifati): <b>{3}</b>\n\
+Qisqartirish: <b>{4}</b>\n\
+Audio codec: <b>{5}</b>\n\
+Audio bitrate: <b>{6}</b>\n\
+Audio channel layout: <b>{7}</b>
 message.video.edit.choose.settings=Siz hech qanday sozlamalarni tanlamadingiz. Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=\ud83d\udd25Videoni tahrirlash
 message.choose.video.edit.settings=Klaviaturada video tahrirlash sozlamalarini tanlang
@@ -307,7 +306,7 @@ message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
 vedit.resolution.command.name=\ud83e\uddbeO'lchamlari
-vedit.quality.command.name=\ud83e\udd77Siqilish nisbati
+vedit.quality.command.name=\ud83e\udd77Crf(Sifati)
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -369,9 +368,9 @@ message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> 
 <b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
 message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
-message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0}% siqish tezligi va {1} audio bit tezligi. \
+message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} crf va {1} audio bit tezligi. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
-message.resolution.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0}% siqish tezligi. \
+message.resolution.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} crf. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
 bundan kamroq rezolyutsiyani tanlashingiz kerak
