1. При выборе crf не пытаться угадать аудио битрейт 2. Добавить подсказку при выборе crf

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -127,30 +127,29 @@ compress.audio.command.description=compress audio
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>The lower the bitrate, the smaller the output file size will be and the lower quality will be.</i>
 message.audio.compress.opus.estimated.size=Estimated size: <b>{0}</b>
 message.audio.compress.original.size=Original size: <b>{0}</b>
-message.video.compression.caption=Video compressed by <b>30% as default</b>. If you need custom <b>compression rate</b> use /vedit command
+message.video.compression.caption=If you need custom <b>quality</b> use /vedit command
 message.compressed.size=Original size: <b>{0}</b>\n\
 Compressed size: <b>{1}</b>
-message.video.edit.welcome=Send me a video or direct link to a video to <b>compress</b>, <b>change resolution</b> etc. \n\n\
+message.video.edit.welcome=Send me a video or direct link to a video to <b>change quality</b>, <b>audio bitrate</b>, <b>audio codec</b> etc. \n\n\
 Only the last sent video will be edited. Click <b>PROBE</b> on the keyboard to get current video information.
 message.video.edit.settings=<b>Your file</b>:\n\
 Format: <b>{0}</b>\n\
 Size: <b>{1}</b>\n\
-Resolution: <b>{2}</b>\n\n\
+Quality: <b>{2}</b>\n\n\
 <b>Result</b>:\n\
-Crf(Quality): <b>{3}</b>\n\
-Resolution: <b>{4}</b>\n\
+Quality: <b>{3}</b>\n\
+Crf: <b>{4}</b>\n\
 Audio codec: <b>{5}</b>\n\
 Audio bitrate: <b>{6}</b>\n\
 Audio channel layout: <b>{7}</b>
-message.video.edit.choose.settings=You haven't selected any settings. Choose desired settings on the keyboard and click <b>Edit video</b>
+message.video.edit.choose.settings=Choose desired settings on the keyboard and click <b>Edit video</b>
 edit.video.command.description=\ud83d\udd25Edit video
-message.choose.video.edit.settings=Choose video edit settings on the keyboard
 message.send.video.to.edit=At first send me a video or direct link to a video to edit
 message.video.will.be.edited=Video will be edited\n\
 Global queue position: <b>{0}</b>
 video.editing.step=Editing
-video.editing.resolution.changed=Original resolution: <b>{0}</b>\n\
-Result resolution: <b>{1}</b>
+video.editing.resolution.changed=Source quality: <b>{0}</b>\n\
+Result quality: <b>{1}</b>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
 message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
@@ -203,7 +202,7 @@ message.media.cut.start.point=Send me start time to cut in <b>hh:mm:ss</b>. For 
 message.media.cut.end.point=Send me end time to cut in <b>hh:mm:ss</b>. For example: <b>02:15:30</b> to end cutting at <b>2 hour 15 minutes 30 seconds</b>
 message.media.cut.invalid.end.point=\u2757\ufe0fEnd time must be after start time
 message.video.probe.result=Format: <b>{0}</b>\n\
-Resolution: <b>{1}</b>\n\
+Quality: <b>{1}</b>\n\
 Width<b>x</b>Height: <b>{2}</b>\n\
 Length: <b>{3}</b>\n\
 Size: <b>{4}</b>\n\
@@ -306,8 +305,8 @@ message.add.subtitles.mode=Add subtitles
 message.replace.audio.mode=Replace audio
 message.replace.subtitles.mode=Replace subtitles
 vavmerge.start.command.name=Start
-vedit.resolution.command.name=\ud83e\uddbeResolution
-vedit.quality.command.name=\ud83e\udd77Crf(Quality)
+vedit.resolution.command.name=\ud83e\uddbeQuality
+vedit.quality.command.name=\ud83e\udd77Crf
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -317,11 +316,8 @@ message.choose.video.audio.codec=Choose audio codec on the keyboard
 message.choose.video.audio.bitrate=Choose audio bitrate on the keyboard
 message.choose.video.audio.mono.stereo=Choose audio channel layout on the keyboard
 message.dont.change=Don't change
-message.dont.compress=Don't compress
 message.auto=Auto
 message.choose.edit.settings=At first choose desired settings on the keyboard
-message.video.edit.result.size=Original size: <b>{0}</b>\n\
-Result size: <b>{1}</b>
 message.only.media.from.link.can.be.uploaded=You have not sent a direct link to a video
 message.incorrect.media.link=I can't download a video from this link. <b>Send me direct link to a video.</b> \
 If you think it is a bug then report it to <a href="https://t.me/smart_file_utils_support">Customer service</a>
@@ -352,29 +348,21 @@ message.speed=Speed:
 message.trial.user.zero.size.limit=I can't detect your file size. With trial subscription you can't convert files with unknown size
 message.trial.user.size.limit=With trial subscription you can convert files only up to <b>{0}</b>. Your file size <b>{1}</b>
 message.trial.user.count.limit=With trial subscription you can only <b>{0}</b> conversions a day. You have already completed <b>{0}</b> conversions today
-by.percentage.command.name=by {0}%
-message.vedit.choose.compression.rate=Chose compression rate in percentage on the keyboard
-message.vedit.choose.resolution=Chose video resolution on the keyboard
+message.vedit.choose.compression.rate=Chose <b>crf</b> on the keyboard. The bigger the value, \
+the smaller the output file size will be and the lower video quality will be
+message.vedit.choose.resolution=Chose quality on the keyboard
 message.vedit.choose.audio.codec=Chose audio codec on the keyboard
 message.vedit.choose.audio.bitrate=Chose audio bitrate on the keyboard
 message.vedit.choose.audio.channel.layout=Chose audio channel layout on the keyboard
-message.estimated.size.after.compression=Estimated size after compression: <b>{0}</b>
-message.compress.by=Compress by: <b>{0}</b>
 message.invalid.start.point=You need to choose another start point. \
 You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
-message.use.vedit.for.compression=With /vedit command you can compress your video up to <b>{0}</b>. \
-So your video, compressed by <b>{0}</b>, could be <b>{1}</b> in size
 message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
 message.resolution.selected=Recommended settings for good compression: {0} crf and {1} audio bitrate. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.resolution.selected.no.audio=Recommended settings for good compression: {0} crf. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
-message.resolution.cant.be.increased=You can only decrease the video resolution. Your video resolution is {0}, so you need to choose \
-resolution lower than that
-message.compression.rate.selected=Recommended settings for good compression: {0} audio bitrate and {1} resolution. \
-If you want you can choose another settings manually, but in that way i can''t guarantee good result
-message.compression.rate.selected.no.audio=Recommended settings for good compression: {0} resolution. \
-If you want you can choose another settings manually, but in that way i can''t guarantee good result
+message.resolution.cant.be.increased=You can only decrease the video quality. Your video quality is {0}, so you need to choose \
+quality lower than that
 message.no.audio.in.video=Your video doesn't contain audio so you can't choose audio settings because it has no sense
 message.video.screenshot.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time <b>{1}</b>. Taking screenshot impossible with this options
