--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -110,32 +110,31 @@ message.audio.compress.prompt.opus.cancel=\ud83d\udca1<i>Opus - bu eng siqilgan 
 message.audio.compress.prompt.bitrate=\ud83d\udca1<i>Bitrate qancha past bo'lsa, chiqadigan fayl hajmi shuncha kichik va sifati past bo'ladi.</i>
 message.audio.compress.opus.estimated.size=Siqilgandan keyingi o''lcham: <b>{0}</b>
 message.audio.compress.original.size=Siqishdan oldin o''lcham: <b>{0}</b>
-message.video.compression.caption=Video sukut bo'yicha <b>30%</b> siqiladi. Agar siz boshqa siqish nisbati bilan videoni siqishingiz kerak bo'lsa, /vedit buyrug'idan foydalaning
+message.video.compression.caption=Agar sizga boshqa sifat kerak bo'lsa, /vedit buyrug'idan foydalaning
 message.compressed.size=Asl hajmi: <b>{0}</b>\n\
 Siqilgandan keyingi o''lcham: <b>{1}</b>
-message.video.edit.welcome=Menga <b>Siqish</b>, <b>piksellar sonini o'zgartirish</b> va boshqalar uchun video \
-yoki to'g'ridan -to'g'ri video havolasini yuboring\n\n\
+message.video.edit.welcome=<b>Sifatni o'zgartirish</b>, <b>audio bit tezligini</b>, <b>audio kodek</b> \
+uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring\n\n\
 Faqat yaqinda yuklangan videoga o'zgartirish kiritiladi. Video haqida ma'lumot \
 olish uchun klaviaturadan <b>PROBE</b> ni tanlang.
 message.video.edit.settings=<b>Sizning faylingiz</b>:\n\
 Format: <b>{0}</b>\n\
 Hajmi: <b>{1}</b>\n\
-O''lchamlari: <b>{2}</b>\n\
+Sifati: <b>{2}</b>\n\
 <b>Natija</b>:\n\
-Crf(Sifati): <b>{3}</b>\n\
-Qisqartirish: <b>{4}</b>\n\
+Sifati: <b>{3}</b>\n\
+Crf: <b>{4}</b>\n\
 Audio codec: <b>{5}</b>\n\
 Audio bitrate: <b>{6}</b>\n\
 Audio channel layout: <b>{7}</b>
-message.video.edit.choose.settings=Siz hech qanday sozlamalarni tanlamadingiz. Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
+message.video.edit.choose.settings=Klaviaturadan kerakli sozlamalarni tanlang va <b>Videoni tahrirlash</b> ni bosing
 edit.video.command.description=\ud83d\udd25Videoni tahrirlash
-message.choose.video.edit.settings=Klaviaturada video tahrirlash sozlamalarini tanlang
 message.send.video.to.edit=Avval tahrirlash uchun menga video yoki to'g'ridan-to'g'ri video havolasini yuboring
 message.video.will.be.edited=Video o''zgartiriladi\n\
 Global navbatdagi joy: <b>{0}</b>
 video.editing.step=tahrirlash
-video.editing.resolution.changed=Asl o''lcham: <b>{0}</b>\n\
-Natijada echim: <b>{1}</b>
+video.editing.resolution.changed=Asl sifati: <b>{0}</b>\n\
+Natijada sifati: <b>{1}</b>
 message.incompressible.audio=Ushbu audioni siqib ololmayapman
 message.compress.audio.output.format=Siqish formati: <b>{0}</b>
 message.compress.audio.format.updated=Siqish formati yangilandi
@@ -305,8 +304,8 @@ message.replace.audio.mode=Audio almashtiring
 message.replace.subtitles.mode=Subtitrlar almashtiring
 vavmerge.start.command.name=Boshlamoq
 message.only.media.from.link.can.be.uploaded=Siz videoga havolani taqdim etmadingiz
-vedit.resolution.command.name=\ud83e\uddbeO'lchamlari
-vedit.quality.command.name=\ud83e\udd77Crf(Sifati)
+vedit.resolution.command.name=\ud83e\uddbeSifat
+vedit.quality.command.name=\ud83e\udd77Crf
 vedit.audio.codec.command.name=Audio codec
 vedit.audio.mono.stereo.command.name=Mono,stereo
 vedit.audio.bitrate.command.name=Audio bitrate
@@ -316,10 +315,7 @@ message.choose.video.audio.bitrate=Klaviaturada audio bit tezligini tanlang
 message.choose.video.audio.mono.stereo=Klaviaturada "channel layout" -ni tanlang
 message.auto=Avtomatik
 message.dont.change=O'zgartirmang
-message.dont.compress=Siqmang
 message.choose.edit.settings=Birinchidan, klaviaturada kerakli sozlamalarni tanlang
-message.video.edit.result.size=Asl hajmi: <b>{0}</b>\n\
-Natija hajmi: <b>{1}</b>
 message.incorrect.media.link=Videoni ushbu havoladan yuklab ololmayapman. <b>Menga videoning to'g'ridan-to'g'ri havolasini yuboring.</b> \
 Agar bu xato deb o'ylasangiz, iltimos, biz bilan <a href="https://t.me/smart_file_utils_support">qo'llab-quvvatlash jamoasi</a> bilan bog'laning
 message.unsupported.media.source=<b>YouTube, Instagram, TikTok-ga havolalar hali qo'llab-quvvatlanmaydi</b>
@@ -354,18 +350,13 @@ message.speed=Tezlik:
 message.trial.user.zero.size.limit=Men sizning faylingiz hajmini aniqlay olmayapman. Sinov obunasi bilan siz noma'lum fayllarni o'zgartira olmaysiz
 message.trial.user.size.limit=Sinov obunasi bilan siz faqat <b>{0}</b> hajmdagi fayllarni o''zgartirishingiz mumkin. Fayl hajmi <b>{1}</b>
 message.trial.user.count.limit=Sinov obunasi bilan siz kuniga atigi <b>{0}</b> marta konvertatsiya qilishingiz mumkin. Siz bugun <b>{0}</b> ta konversiyani yakunladingiz
-by.percentage.command.name={0}% ga
-message.vedit.choose.compression.rate=Klaviaturadan <b>siqilish tezligi</b> ni tanlang
-message.vedit.choose.resolution=Klaviaturada <b>video ravshanligi</b> ni tanlang
+message.vedit.choose.compression.rate=Klaviaturadan <b>crf</b> ni tanlang. Qiymat qanchalik baland bo'lsa, chiqish fayli hajmi shunchalik past bo'ladi va video sifati past bo'ladi
+message.vedit.choose.resolution=Klaviaturada <b>sifati</b> ni tanlang
 message.vedit.choose.audio.codec=Klaviaturada <b>audio kodek</b> ni tanlang
 message.vedit.choose.audio.bitrate=Klaviaturada <b>audio bit tezligi</b> ni tanlang
 message.vedit.choose.audio.channel.layout=Klaviaturada <b>audio channel layout</b> ni tanlang
-message.compress.by=Qisqartirish: <b>{0}</b>
-message.estimated.size.after.compression=Siqishdan keyin taxminiy hajmi: <b>{0}</b>
 message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
 Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
-message.use.vedit.for.compression=/vedit buyrug''i bilan siz videoni <b>{0}</b> gacha siqishingiz mumkin. \
-<b>{0}</b> siqilgan video o''lchamingiz <b>{1}</b> bo''lishi mumkin
 message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
 message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} crf va {1} audio bit tezligi. \
@@ -374,9 +365,5 @@ message.resolution.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlama
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
 bundan kamroq rezolyutsiyani tanlashingiz kerak
-message.compression.rate.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} audio bit tezligi va {1} piksellar sonidir. \
-Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
-message.compression.rate.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} piksellar sonidir. \
-Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.no.audio.in.video=Videoda audio mavjud emas, shuning uchun siz audio uchun sozlamalarni tanlay olmaysiz, chunki bu mantiqiy emas
 message.video.screenshot.out.of.range=\u2757\ufe0fVideo uzunligi <b>{0}</b>, lekin siz <b>{1}</b> vaqtni tanladingiz. Skrinshot olish mumkin emas
