--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -357,7 +357,7 @@ message.vedit.choose.audio.bitrate=Klaviaturada <b>audio bit tezligi</b> ni tanl
 message.vedit.choose.audio.channel.layout=Klaviaturada <b>audio channel layout</b> ni tanlang
 message.invalid.start.point=Siz boshqa boshlanish vaqtini tanlashingiz kerak. \
 Siz <b>{0}</b> ni yuborgansiz, lekin videongiz faqat <b>{1}</b> uzunlikda. Videoni qayta yuboring va boshqa boshlanish vaqtini tanlang
-message.video.2.gif.max.size=b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
+message.video.2.gif.max.size=<b>10MB</b> dan katta videolardan GIF yaratish mumkin emas. Videongiz hajmi <b>{0}</b>. \
 O''lchamini kamaytirish uchun /vedit va /vcut buyruqlari bilan uni qisqartiring yoki kesib oling va qaytadan urinib ko''ring
 message.resolution.selected=Yaxshi siqish uchun tavsiya etilgan sozlamalar {0} crf va {1} audio bit tezligi. \
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
