--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -356,7 +356,7 @@ message.vedit.choose.audio.bitrate=Chose audio bitrate on the keyboard
 message.vedit.choose.audio.channel.layout=Chose audio channel layout on the keyboard
 message.invalid.start.point=You need to choose another start point. \
 You have sent <b>{0}</b> start point, but your video length just <b>{1}</b>. Send your video again and send a new valid start point
-message.video.2.gif.max.size=Gif can't be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
+message.video.2.gif.max.size=Gif can''t be created from video bigger than <b>10MB</b>. Your video''s size is <b>{0}</b>. \
 Compress it or cut, with /vedit and /vcut commands, to reduce size and try again
 message.resolution.selected=Recommended settings for good compression: {0} crf and {1} audio bitrate. \
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
