Фикс сжатия аудио

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -151,14 +151,12 @@ video.editing.step=Editing
 video.editing.resolution.changed=Source quality: <b>{0}</b>\n\
 Result quality: <b>{1}</b>
 message.compress.audio.output.format=Compression format: <b>{0}</b>
-message.compress.audio.output.frequency=Frequency: <b>{0}Hz</b>
 message.compress.audio.bitrate.updated=Bitrate updated
-message.compress.audio.frequency.updated=Frequency updated
 message.compress.audio.format.updated=Compression format updated
 conversion.timed.out=Timed out. Conversion failed.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>, frequency - <b>{2}Hz</b>. \
+message.default.compression.settings=\ud83d\udca1<i>Default compression bitrate - <b>{0}</b>, compression format - <b>{1}</b>. \
 Use the /acompress command if you want to choose another bitrate or compression format.</i>
 message.corrupted.video=Your video is damaged and can't be processed
 message.vaimake.welcome=Send me an <b>audio</b> and <b>image</b> to make a video and click <b>Make a video</b> on the keyboard
