--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -142,7 +142,7 @@ message.compress.audio.bitrate.updated=Bitrate yangilandi
 conversion.timed.out=Vaqt tugadi. Konversiya amalga oshmadi.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - <b>{0}</b>, siqishni formati - <b>{1}</b>, chastotasi - <b>{2}Hz</b>. \
+message.default.compression.settings=\ud83d\udca1<i>Odatiy bit tezligi - <b>{0}</b>, siqishni formati - <b>{1}</b>. \
 Agar boshqa bitrate yoki formatni tanlashni xohlasangiz /acompress buyrug''idan foydalaning.</i>
 message.corrupted.video=Videongiz buzilgan va uni qayta ishlash imkonsiz
 message.vaimake.welcome=Menga <b>audio</b> va <b>rasm</b> ni yuboring va video yaratish uchun klaviaturangizdagi <b>Video yarating</b> tugmasini bosing
@@ -151,8 +151,6 @@ message.vaimake.awaiting.audio=Yaxshi, siz rasmni yubordingiz, endi menga <b>aud
 vaimake.command.name=Video yarating
 message.vaimake.files.canceled=Fayllar bekor qilindi. Video yaratish uchun menga audio va rasm yuboring.
 message.vaimake.click=Zo'r! Endi klaviaturada <b>Videoni yarating</b> tugmasini bosing
-message.compress.audio.output.frequency=Chastotani: <b>{0}Hz</b>
-message.compress.audio.frequency.updated=Chastotasi yangilandi
 message.vavmerge.welcome=Menga <b>video</b> va <b>audio yoki subtitrlar</b> yuboring va <b>Birlashtirish</b> tugmasini bosing. \
 Bir vaqtning o''zida maksimal <b>{0} audio va {1}subtitrlar</b> bilan ishlashim mumkin.\n\n\
 \ud83d\udca1<i>Video va audio sinxronlash muammolarini oldini olish uchun /vcut va /acut (@SmartAudioConverterBot) \
