--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -134,14 +134,12 @@ video.editing.resolution.changed=Исходное качество: <b>{0}</b>\n
 Результирующее качество: <b>{1}</b>
 message.incompressible.audio=Я не могу сжать это аудио. Это аудио уже хорошо сжато. Используйте команду /acompress с более низким битрейтом для лучшего сжатия
 message.compress.audio.output.format=Формат сжатия: <b>{0}</b>
-message.compress.audio.output.frequency=Частота: <b>{0}Hz</b>
 message.compress.audio.format.updated=Формат сжатия обновлен
 message.compress.audio.bitrate.updated=Bitrate обновлен
-message.compress.audio.frequency.updated=Частота обновлена
 conversion.timed.out=Время вышло. Конвертация не удалась.
 opus.compression.command.description=Opus
 mp3.compression.command.description=Mp3
-message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - <b>{0}</b>, формат сжатия - <b>{1}</b>, частота - <b>{2}Hz</b>. \
+message.default.compression.settings=\ud83d\udca1<i>Битрейт по умолчанию - <b>{0}</b>, формат сжатия - <b>{1}</b>. \
 Используйте команду /acompress, если хотите выбрать другой битрейт или формат.</i>
 message.corrupted.video=Ваше видео повреждено и не может быть обработано
 message.vaimake.welcome=Отправьте мне <b>аудио</b> и <b>картинку</b>, и нажмите <b>Создать видео</b> на клавиатуре, чтобы создать видео
