Проверяем есть ли видео потоки

--- a/src/main/resources/messages_uz.properties
+++ b/src/main/resources/messages_uz.properties
@@ -363,5 +363,6 @@ message.resolution.selected.no.audio=Yaxshi siqish uchun tavsiya etilgan sozlama
 Agar xohlasangiz, boshqa sozlamalarni qo''lda tanlashingiz mumkin, ammo bu holda men yaxshi natijani kafolatlay olmayman.
 message.resolution.cant.be.increased=Siz faqat piksellar sonini kamaytira olasiz. Videoning aniqligi {0}p, shuning uchun \
 bundan kamroq rezolyutsiyani tanlashingiz kerak
+message.no.video.streams=\u203c\ufe0fFaylingizda video oqim mavjud emas, shuning uchun uni kvadratga aylantira olmayman
 message.no.audio.in.video=Videoda audio mavjud emas, shuning uchun siz audio uchun sozlamalarni tanlay olmaysiz, chunki bu mantiqiy emas
 message.video.screenshot.out.of.range=\u2757\ufe0fVideo uzunligi <b>{0}</b>, lekin siz <b>{1}</b> vaqtni tanladingiz. Skrinshot olish mumkin emas
